[ML] Autoscaling fixes and additional debug logging
Fixes the following problems in autoscaling:

1. Divide by zero error when scaling up from zero
2. Something else to be determined...

Also adds more debug logging so we can get visibility of
what happens in deployed Cloud clusters when necessary.